# EnvSync

./: .env  Cargo.toml  README.md
src/: lib.rs
